# hypro

./: .clang-format  .dockerignore  .gitignore  .gitlab-ci.yml  .project  .travis.yml  CHANGELOG.md  CMakeLists.txt  Dockerfile  Dockerfile.carl  LICENSE.md  README  README.md  README.txt  antlrnotes  benchmark.sh  bib14684.aux  bib20685.aux  citelist.doc10839  createAndDeployDocumentation.sh  generate_parameters.py  main.py  massif.out.27602  massif.out.3923  nnBenchmarkVerification.sh  parse_results.py  processCoverage.sh  sonar-project.properties  timingTree.gv  todos
doc/: CMakeLists.txt  Doxygen.in  antlrnotes  doxygen.txt  footer.html  inputSpecification.tex  mainpage.dox  protocol_2014-05-22.txt
doc/docpage/: _config.yml  index.md
doc/manual/: doxygen.conf  doxygen.conf.in  header.tex  hypro.md  stateSets.md
doc/markdown/: developer.md  gettingStarted.md  hypro.md  stateSets.md  tutorials.md
doc/misc/: boxMinMaxPoint.tex
examples/: CMakeCache.txt  CMakeLists.txt  FIX_example_benchmark.cpp  FIX_example_dynamicStrategies.cpp  FIX_example_parallel_composition.cpp  INCOMPLETE_example_benchmarks.cpp  INCOMPLETE_example_eigenSimpleFlow.cpp  INCOMPLETE_example_facetEnumeration.cpp  INCOMPLETE_example_parallel_composition.cpp  INCOMPLETE_example_singularReachability.cpp  INCOMPLETE_example_stochasticRectangularReachability.cpp  Visualizer.cpp  Visualizer.h  example_ACAS_unbounded_inclusion_check.cpp  example_ACASbenchmark.cpp  example_ACASbenchmarkVerification.cpp  example_ACASbenchmark_generalized_verification.cpp  example_ACASbenchmark_verification.cpp  example_FMPlex.cpp  example_FourierMotzkin.cpp  example_GaussElim_containment.cpp  example_HPolytope-transformation.cpp  example_HPolytope.cpp  example_HPolytope_diss.cpp  example_HVPolytope.cpp  example_LabelSynchronization.cpp  example_NNCS_analysis.cpp  example_NN_CEGAR.cpp  example_NNlayer.cpp  example_ONNX_parser.cpp  example_SFconversion.cpp  example_acos.cpp  example_addition.cpp  example_backwardsAnalysis.cpp  example_backwards_under.cpp  example_benchmark.cpp  example_benchmarks.cpp  example_bigConversion.cpp  example_bouncingBall.cpp  example_bouncingBall_Fly.cpp  (+119 more)
examples/TwoTank/: CMakeLists.txt  Visualizer.cpp  Visualizer.h
examples/arch20/: Dockerfile  GRBX01_MES01.model  measure_all.sh  plot_hydra.sh  run_hydra.py
examples/arch21/: Dockerfile  measure_all.sh  readme.txt
examples/arch22/: Dockerfile  measure_all.sh  plot_hydra.sh  readme.txt
examples/input/: 21_simplex_cruise_control.model  21_simplex_cruise_control_spaceEx.xml  21_simplex_watertanks.model  21_simplex_watertanks_deterministic_monitor.model  21_simplex_watertanks_deterministic_monitor_dbg_init_ticks.model  21_simplex_watertanks_deterministic_monitor_small_init.model  21_simplex_watertanks_deterministic_monitor_small_init_ticks.model  21_simplex_watertanks_no_monitor.model  21_simplex_watertanks_universal_monitor.model  bouncing_ball.model  bouncing_ball_horizontal_beam.model  bouncing_ball_inhomogen.model  building.model  chainModel.model  cruise_control.model  filtered_oscillator_4.model  lawn_mower.model  leaking_tank_special.model  platoon_DBND30.model  platoon_DBND42.model  polynomial  rectangular_A_2.model  rectangular_sync1.model  rectangular_sync2.model  result.model  result1.model  rocket.model  rod_reactor.model  rod_reactor_urgent.model  simpleExample.model  simpleTest  simple_tank_plant.model  smoke_detector.model  spiral.model  switching_5.model  test.model  thermostat.eps  thermostat.model  thermostat_basic.model  thermostat_flowstar.model~  (+8 more)
examples/label_synchronization_benchmarks/: example_LabelSynchronization.cpp  example_labelSyncFischer.cpp  example_labelSyncTGC.cpp  example_multiRunFischer.cpp  example_multiRunNRS.cpp  example_multiRunTGC.cpp  example_nuclear_reactor.cpp
examples/nn_prop_inputs/: poly_prop3_5D_artificial_bounds.in  poly_prop4_5D_artificial_bounds.in  poly_rectangle_transformed.in  poly_thermostat.in
examples/nnet/: fc_2-2-2.nnet  fc_2-2.nnet  fc_identity.nnet  fc_relu.nnet  fc_rotate.nnet  fc_thermostat.nnet
examples/star_inputs/: poly_rectangle_safe.in  star_prop3_5D_artificial_bounds.in  star_prop3_5D_normalized.in  star_prop4_5D_artificial_bounds.in  star_prop4_5D_normalized.in  star_rectangle.in  star_rectangle_safe.in  star_rectangle_transformed.in  star_triangle_2.in  star_triangle_negative.in
examples/tutorial/: example_ConvSetMinus.cpp  example_HPolytope.cpp  example_bouncingBall.cpp  example_box.cpp  example_boxIcpIntersection.cpp  example_converter.cpp  example_plot.cpp  example_reachability.cpp  example_reachability_comparison.cpp  example_reachability_comparison_increasing_jump_depth.cpp  example_simple.cpp  example_urgent_bouncingBall.cpp
examples/urgency/: example_ConvSetMinus.cpp  example_reachability_comparison.cpp  example_reachability_comparison_increasing_jump_depth.cpp  example_simple.cpp  example_urgent_bouncingBall.cpp
include/: CMakeLists.txt
include/hydra/: Strategies.h  typedefs.h
include/hypro/: CMakeLists.txt  carlTypes.h  config.h  flags.h.in  paths.h.in  types.h
include/tmlib_tmp/: TaylorModel.cpp  TaylorModel.h
include/tool/: CMakeLists.txt  Strategies.cpp  Strategies.h  typedefs.h
resources/: .gitignore  CMakeLists.txt  ExternalAntlr4Cpp.cmake  carl.cmake  cereal.cmake  clp.cmake  gbenchmark.cmake  glpk.cmake  glpk_download.cmake  graphviz.cmake  gtest.cmake  lace.cmake  matlab.cmake  mimalloc.cmake  protobuf.cmake  tinyxml.cmake  z3.cmake
resources/antlr4-cpp-runtime-4.7.1-source/: CMakeLists.txt  README.md
resources/carl/: CMakeLists.txt
resources/glpk-4.45/: config.h
resources/glpk-5.0/: config.h  config.h.in  config.status  configure  libtool
src/: CMakeLists.txt
src/dev/: Makefile  RootGrowNode.h  RootGrowTree.cpp  RootGrowTree.h  SFArchitecture.cpp  SFArchitecture.h
src/hydra/: CMakeLists.txt  Strategies.cpp  main.cpp
src/hypro/: .clang-format  CMakeLists.txt  carlTypes.h  config.h  flags.h  flags.h.in  types.cpp  types.h
src/intervals_tmp/: Interval.cpp  Interval.h  include.h
test/: .clang-format  CMakeLists.txt
(+18917 files in other folders)
